<resources>
    <string name="app_name">ThreadedProj8AndroidApp</string>
    <string name="hintUsername">Username</string>
    <string name="hintPassword">Password</string>
    <string name="btnLogin">Login</string>
    <string name="lblCustFName">First Name:</string>
    <string name="lblCustLName">Last Name:</string>
    <string name="lblCustAddress">Address:</string>
    <string name="lblCustCity">City:</string>
    <string name="lblCustProv">Province:</string>
    <string name="lblCustPostal">Postal Code:</string>
    <string name="lblCustCountry">Country:</string>
    <string name="lblCustHomePhone">Home Phone:</string>
    <string name="lblCustBusPhone">Business Phone:</string>
    <string name="lblCustEmail">Email:</string>
    <string name="lblCustUsername">Username:</string>
    <string name="lblCustPassword">Password:</string>
    <string name="title_activity_start">StartActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="lblItineraryNo">Itinerary Number:</string>
    <string name="lblTripStart">Trip Start:</string>
    <string name="lblTripEnd">Trip End Date:</string>
    <string name="lblDescription">Description:</string>
    <string name="lblDestination">Destination:</string>
    <string name="lblTotalCost">Total Cost:</string>
    <string name="btnEditCustomer">Update</string>
    <string name="title_activity_maps">Map</string>
    <string name="btnPurchase">PURCHASE</string>
    <string name="title_activity_purchases">Purchase</string>
    <string name="lblBDItineraryNo">Itinerary No:</string>
    <string name="lblBDTripStart">Trip Start:</string>
    <string name="lblBDTripEnd">Trip End:</string>
    <string name="lblBDDescription">Description:</string>
    <string name="lblBDDestination">Destination:</string>
    <string name="lblBDTotalPrice">Price:</string>
    <string name="lblNoOfTrav"># Of Travellers:</string>
    <string name="lblConfirmPurchase">Confirm Purchase?</string>
    <string name="btnPurchaseConfirm">Purchase</string>
    <string name="lblRegister"><u>No account? Click here to register.</u></string>
    <string name="btnRegisterCustomer">Register</string>
    <string name="switchRememberMe">Remember me:</string>
    <string name="lblClassId">Seating class:</string>
    <string name="btnLogout">Logout</string>
</resources>