<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblCustFName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCustFName" />

        <EditText
            android:id="@+id/txtCustFName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblCustLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCustLName" />

        <EditText
            android:id="@+id/txtCustLName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblCustAddress"
            android:layout_width="72dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCustAddress" />

        <EditText
            android:id="@+id/txtCustAddress"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblCustCity"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCustCity" />

        <EditText
            android:id="@+id/txtCustCity"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:width="200dp"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblCustProv"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCustProv" />

        <EditText
            android:id="@+id/txtCustProvince"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblCustPostalCode"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCustPostal" />

        <EditText
            android:id="@+id/txtCustPostalCode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblCustCountry"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCustCountry" />

        <EditText
            android:id="@+id/txtCustCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblCustHomePhone"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCustHomePhone" />

        <EditText
            android:id="@+id/txtCustHomePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblCustBusPhone"
            android:layout_width="83dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCustBusPhone" />

        <EditText
            android:id="@+id/txtCustBusPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/lblCustEmail"
            android:layout_width="82dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lblCustEmail" />

        <EditText
            android:id="@+id/txtCustEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="textPersonName" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/lblCustUsername"
            android:layout_width="8dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lblCustUsername" />

        <TextView
            android:id="@+id/lblUsernameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical">

        <TextView
            android:id="@+id/lblCustPassword"
            android:layout_width="7dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lblCustPassword" />

        <TextView
            android:id="@+id/lblPasswordValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </TableRow>

    <Button
        android:id="@+id/btnEditCustomer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnEditCustomer"
        android:layout_gravity="center_horizontal"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvBookingDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>