<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/lblDBItineraryNo"
            android:layout_width="7dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lblBDItineraryNo"
            android:textColor="@color/black"
            android:textSize="16sp" />

    <TextView
        android:id="@+id/lblBDItineraryNoValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:textSize="16sp"
        android:textColor="@color/black"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/lblBDTripStart"
            android:layout_width="7dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lblBDTripStart"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/lblBDTripStartValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/lblBDTripEnd"
            android:layout_width="7dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lblBDTripEnd"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/lblBDTripEndValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/lblBDDescription"
            android:layout_width="58dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lblBDDescription"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblBDDescriptionValue"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/lblBDDestination"
            android:layout_width="59dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lblBDDestination"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/lblBDDestinationValue"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/lblBDTotalPrice"
            android:layout_width="7dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lblBDTotalPrice"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/lblBDTotalPriceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </TableRow>
    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/lblNoOfTrav"
            android:layout_width="7dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/lblNoOfTrav"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/lblNoOfTravValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/black"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:id="@+id/lblClassId"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:text="@string/lblClassId"
            android:textColor="@color/black"
            android:textSize="16sp" />
        <Spinner
            android:id="@+id/ddlClassId"
            android:layout_width="78dp"
            android:layout_height="26dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:dropDownWidth="50dp"
            android:minWidth="50dp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/lblConfirmPurchase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lblConfirmPurchase"
            android:textSize="16sp"
            android:textColor="@color/black"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <Button
            android:id="@+id/btnPurchaseConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPurchaseConfirm" />
    </TableRow>

</LinearLayout>