<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCustFNameReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCustFName"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtCustFNameReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint=" #ff9933"
                android:ems="10"
                android:hint="First Name"
                android:inputType="textPersonName" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCustLastNameReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCustLName"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtCustLNameReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint=" #ff9933"
                android:ems="10"
                android:hint="Last Name"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCustAddressReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCustAddress"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtCustAddressReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint=" #ff9933"
                android:ems="10"
                android:hint="Address"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCustCityReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCustCity"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtCustCityReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:width="200dp"
                android:backgroundTint=" #ff9933"
                android:ems="10"
                android:hint="City"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCustProvReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCustProv"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtCustProvinceReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint=" #ff9933"
                android:ems="10"
                android:hint="Province"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCustPostalCodeReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCustPostal"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtCustPostalCodeReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint=" #ff9933"
                android:ems="10"
                android:hint="Postal Code"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCustCountryReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCustCountry"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtCustCountryReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint=" #ff9933"
                android:ems="10"
                android:hint="Country"
                android:inputType="textPersonName" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCustHomePhoneReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCustHomePhone"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtCustHomePhoneReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint=" #ff9933"
                android:ems="10"
                android:hint="Home Phone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCustBusPhoneReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCustBusPhone"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtCustBusPhoneReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint=" #ff9933"
                android:ems="10"
                android:hint="Business Phone"
                android:inputType="phone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCustEmailReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCustEmail"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtCustEmailReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint=" #ff9933"
                android:ems="10"
                android:hint="Email"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCustUsernameReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCustUsername"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtUsernameReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint=" #ff9933"
                android:ems="10"
                android:hint="Username"
                android:inputType="textEmailAddress" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lblCustPasswordReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblCustPassword"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:visibility="gone" />

            <EditText
                android:id="@+id/txtPasswordReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint=" #ff9933"
                android:ems="10"
                android:hint="Password"
                android:inputType="textPassword" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btnRegisterCustomer"
                android:layout_width="141dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:backgroundTint=" #ff9933"
                android:drawableRight="@drawable/ic_action_useradd"
                android:text="@string/btnRegisterCustomer"
                android:textColor="#FFFFFF" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>